Borrado una columna - Prueba

--- a/NivelHL.uproject
+++ b/NivelHL.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{65E1462C-4A09-E810-D9B2-848C6A9F6BF6}",
+	"EngineAssociation": "4.17",
 	"Category": "",
 	"Description": ""
 }
