Canvi de Settings

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=NivelHL
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/HammerlordsLevel.HammerlordsLevel
-GameDefaultMap=/Game/HammerlordsLevel.HammerlordsLevel
+GameDefaultMap=/Game/Levels/Nivel0-1.Nivel0-1
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -65,5 +65,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
