--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=CC5673CE4E44E43A7A0C88BB2EBBED73
-ProjectName=Third Person BP Game Template
+ProjectName=Hammer Lords
+Description=Hammer Lords Game
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "125B0D0F4B3BC89A34E5AC90E9691D3B", "HammerLords")
+CompanyName=Hammer Company
 
 [StartupActions]
 bAddPacks=True
