--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,8 +3,17 @@ ProjectID=CC5673CE4E44E43A7A0C88BB2EBBED73
 ProjectName=Hammer Lords
 Description=Hammer Lords Game
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "125B0D0F4B3BC89A34E5AC90E9691D3B", "HammerLords")
-CompanyName=Hammer Company
+CompanyName=LosCarmelos
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
+
+[/Script/MoviePlayer.MoviePlayerSettings]
+bWaitForMoviesToComplete=True
+bMoviesAreSkippable=False
++StartupMovies=unreal engine 4 intro
++StartupMovies=intro_EMAV
++StartupMovies=
+
+
