--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -14,6 +14,6 @@ bWaitForMoviesToComplete=True
 bMoviesAreSkippable=False
 +StartupMovies=unreal engine 4 intro
 +StartupMovies=intro_EMAV
-+StartupMovies=
++StartupMovies=animatic
 
 
